--- a/qq/lol/index.html
+++ b/qq/lol/index.html
@@ -96,6 +96,7 @@ ul,li{
 <body>
     <!-- 英雄选择 -->
     <div class="info-showbox">
+        <div class="clearfix">
         <ul class="selete-checklist">
             <li class="selete-item current">
                 <span class="ms-radio">
@@ -135,9 +136,8 @@ ul,li{
             </li>
         </ul>
         <div class="search-box">
-            <div class="clearfix">
-                ul.
-            </div>
+                <ul class="shearh-box"></ul>
+        </div>
         </div>
         <ul class="imgtextlist">
             <li>
