--- a/qq/lol/index.html
+++ b/qq/lol/index.html
@@ -145,7 +145,7 @@ ul,li{
                 <p>暗裔剑魔</p>
             </li>
         </ul>
-    </div>
+    </div>d
     <script>
         // const seleteItem =document.querySelector('.selete-item');
         // seleteItem.addEventListener('click',function(){
