--- a/html5/visualize/index.html
+++ b/html5/visualize/index.html
@@ -94,7 +94,7 @@
         renderFrame();
         // console.log('----');
         ctx.clearRect(0, 0, WIDTH, HEIGHT);
-        analyser.getByteFrequencyData(dataArray);
+        // analyser.getByteFrequencyData(dataArray);
         console.log(dataArray);
         for (var i = 0, x = 0; i < bufferLength; i++) {
           barHeight = dataArray[i];
