--- a/qq/lol/index.html
+++ b/qq/lol/index.html
@@ -31,7 +31,7 @@ ul,li{
 .selete-item{
     float: left;
     min-width: 60px;
-    _width:60px; /*手机网站不用*/
+    _width:60px; /*手机网站不需要*/
     margin-right: 17px;
     position: relative;
 }
