--- a/interview/big_file_upload/file_slice.html
+++ b/interview/big_file_upload/file_slice.html
@@ -11,15 +11,40 @@
 <body>
     <input type="file" id="file">
     <script>
+        //请求封装
+        //1.http 并发 blob 上传 chunk  /POST
+        //2.当blob Promise.All 再发送一个merge的请求   /merge
+        function request({
+            url,
+            method = 'POST',
+            data,
+            headers = {},
+            requestList //上传的文件列表
+        }) {
+            return new Promise(resolve => {
+                const xhr = new XMLHttpRequest(); //js ajax对象
+                xhr.open(method, url); //请求
+                Object.keys(headers).forEach(key => {
+                    xhr.setRequestHeader(key, headers[key]) //请求加头
+                });
+                xhr.send(data);
+                xhr.onload = e => {
+                    resolve({
+                        data: e.target.response
+                    });
+                }
+            })
+        }
         document
             .getElementById('file')
-            .addEventListener('change', (event) => {
+            .addEventListener('change', async(event) => {
                 const file = event.target.files[0] //es6文件对象
+                const file_name = file.name.split('.')[0]
                     //     // console.log(file);
                     // console.log(Object.prototype.toString.call(file));
                     // console.log(Object.prototype.toString.call(file.slice(0, 102400)));
                 let cur = 0,
-                    size = 1024 * 1024; //1M
+                    size = 0.5 * 1024 * 1024; //1M
                 const fileChunkList = []; //blob数组
                 while (cur < file.size) {
                     fileChunkList.push({
@@ -27,7 +52,27 @@
                     })
                     cur += size;
                 }
-                console.log(fileChunkList)
+                // console.log(fileChunkList)
+                const requestList = fileChunkList
+                    .map(({
+                        file
+                    }, index) => {
+                        const formData = new FormData();
+                        formData.append("chunk", file);
+                        formData.append("filename", `${file_name}-${index}`);
+                        return {
+                            formData
+                        };
+                    }).map(async({
+                        formData
+                    }) => {
+                        request({
+                            url: 'http://localhost:3000', //前后端的api
+                            data: formData
+                        })
+                    })
+                await Promise.all(requestList)
+                    // console.log(requestList)
             })
     </script>
 </body>
