--- a/css/mimall/index.html
+++ b/css/mimall/index.html
@@ -19,11 +19,17 @@
         transform: translateY(-10px);
         box-shadow: 30px 30px 50px #888888;
     }
+    .ff{
+        color: red;
+    }
 </style>
 </head>
 <body>
     <div class="container">
         <image src="https://cdn.cnbj0.fds.api.mi-img.com/b2c-shopapi-pms/pms_1540429657.8272281.jpg" alt="" class="img">
+        <div class="ff">
+            电脑
+        </div>
     </div>
 </body>
 </html>
