--- a/css/mimall/xiaomi.html
+++ b/css/mimall/xiaomi.html
@@ -62,6 +62,9 @@
             margin: 0px 5px 5px;
             transition: all .2s linear;
         }
+        .title-left:hover{
+            color: #ff6600
+        }
         .list:hover{
             transform: translateY(-2px);
             box-shadow:10px 10px 5px #00000027;
