--- a/interview/bytedance/Efficiency-engineering/index.html
+++ b/interview/bytedance/Efficiency-engineering/index.html
@@ -1,37 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-  .out {
-    border: 1px solid #000;
-    height: 200px;
-    width: 100px;
-    overflow: scroll;
-  }
-  .inner {
-    border: 1px solid red;
-    width: 20px;
-    height: 20px;
-    margin-top: 1000px;
-  }
-  .inner1 {
-    border: 1px solid green;
-    width: 20px;
-    height: 20px;
-    margin-top: 40px;
-    position: sticky;
-    top: 10px;
-  }
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+    }
+
+    .out {
+      /* position: absolute; top: 50%;
+      transform: translateY(-50%);  */
+      background-color: blue;
+      width: 100%;
+      margin-left: 10px;
+      margin-right: 10px;
+      text-align: center;
+      font-size: 20px;
+    }
+
+    .in {
+      /* padding 百分比 相对于自己的 宽度来计算的 */
+      height: 0;
+      padding: 25% 0;
+    }
   </style>
 </head>
+
 <body>
   <div class="out">
-    <div class="inner1"></div>
-    <div class="inner"></div>
+    <div class="in">
+      A
+    </div>
   </div>
+  <script>
+    function foo() {
+      console.log(arguments)
+      console.log(Array.from(arguments));
+      console.log([...arguments])
+      console.log(Array.prototype.slice.call(arguments));
+      console.log(Array.prototype.splice.call(arguments, 0));
+      let a = []
+      a.slice()
+    }
+    foo(1, 2, 3, 4, 5)
+
+    // 
+    let a = [1], b = [1], c = 4, d = 4;
+    // 基本数据类型
+    // 变量 和 变量对应的值 都存在 栈内存里面
+    // 复杂数据类型
+    // 变量 存在栈内存里面，但是值 存在 堆内存里面
+    c == d  // true
+    a == b // false
+    let e = {}, f = {}
+    e == f
+
+    
+  </script>
 </body>
+
 </html>
